데이터 조회 까지

--- a/src/main/resources/templates/members/new.mustache
+++ b/src/main/resources/templates/members/new.mustache
@@ -12,5 +12,5 @@
     <button type="submit" class="btn btn-primary">Submit</button>
     <a href="/members">Back</a>
 </form>
-
+<a href="/members">Back</a>
 {{>layouts/footer}}
