--- a/src/main/resources/templates/articles/new.mustache
+++ b/src/main/resources/templates/articles/new.mustache
@@ -2,15 +2,16 @@
 
 <form class="container" action="/articles/create" method="post">
     <div class="mb-3">
-        <label class="form-label">제목</label>
+        <label class="form-label">이메일</label>
         <input type="text" class="form-control" name="title">
     </div>
     <div class="mb-3">
-        <label class="form-label">내용</label>
+        <label class="form-label">비밀번호</label>
         <textarea class="form-control" rows="3" name="content"></textarea>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
     <a href="/articles">Back</a>
 </form>
 
+<a href="/articles">Back</a>
 {{>layouts/footer}}
