--- a/src/main/resources/templates/articles/show.mustache
+++ b/src/main/resources/templates/articles/show.mustache
@@ -19,7 +19,7 @@
     </tbody>
     {{/articles}}
 </table>
-
+<a href="/articles/{{articles.id}}/edit" class="btn btn-primary">Edit</a>
 <a href="/articles">Go to Article List</a>
 
 {{>layouts/footer}}
