--- a/src/main/resources/templates/members/new.mustache
+++ b/src/main/resources/templates/members/new.mustache
@@ -2,7 +2,7 @@
 
 <form class="container" action="/join" method="post">
     <div class="mb-3">
-        <label class="form-label">제목</label>
+        <label class="form-label">이메일</label>
         <input type="email" class="form-control" name="email">
     </div>
     <div class="mb-3">
@@ -12,5 +12,5 @@
     <button type="submit" class="btn btn-primary">Submit</button>
     <a href="/members">Back</a>
 </form>
-<a href="/members">Back</a>
+
 {{>layouts/footer}}
