--- a/src/main/resources/templates/comments/_new.mustache
+++ b/src/main/resources/templates/comments/_new.mustache
@@ -31,7 +31,29 @@
                articleId : document.querySelector("#new-comment-article-id").value
            };
 
+           //댓글 객체 출력
            console.log(comment);
+
+           //fetch() - 비동기 통신을 위한 API
+           const url = "/api/articles/" + comment.articleId + "/comments";
+
+
+           fetch(url, {
+               method:"POST",       //post 요청
+               headers: {           //전송 본문의 데이터 타입 정보
+                   "Content-Type": "application/json"
+               },
+               body: JSON.stringify(comment) //comment 객체를 JSON 문자열로 변환해 전송
+           }).then(response =>{
+               //HTTP 응답코드에 따른 메세지 출력
+               const msg = (response.ok) ? "댓글이 등록됐습니다." : "댓글 등록 실패 !";
+               alert(msg);
+
+               //현재 페이지 새로고침
+               window.location.reload();
+           })
+
+
        });
     }
 </script>
